--- a/css/colors.css
+++ b/css/colors.css
@@ -9,6 +9,7 @@ This file contains LESS variables for each of the colors in the DLx color schema
   --lightblue: #5CAFFF;
   --verylightblue: #88C4FE;
   --codegray: #FAFAFA;
+  --codedarkgray: #383A42;
   --darkgray: gray;
   --gray: #CCC;
   --lightgray: #F5F2F0;
