--- a/css/patterns.css
+++ b/css/patterns.css
@@ -100,6 +100,7 @@ This file contains LESS variables for each of the colors in the DLx color schema
   --lightblue: #5CAFFF;
   --verylightblue: #88C4FE;
   --codegray: #FAFAFA;
+  --codedarkgray: #383A42;
   --darkgray: gray;
   --gray: #CCC;
   --lightgray: #F5F2F0;
@@ -355,6 +356,7 @@ This file contains LESS variables for each of the colors in the DLx color schema
   color: white;
 }
 :root {
+  --border: 0.075em solid black;
   --border-radius: 0.35em;
   --font: 'Fira Sans', 'Calibri', 'DejaVu Sans', 'Verdana', 'Arial', 'Helvetica', sans-serif;
   --font-mono: 'Fira Mono', 'Consolas', 'Monaco', 'DejaVu Mono', 'Courier New', monospace;
@@ -363,6 +365,48 @@ This file contains LESS variables for each of the colors in the DLx color schema
   --shadow: 0.075em 0.075em 0.15em var(--gray);
   --shadow-button: inset -0.075em -0.075em 0.15em 0em rgba(0, 0, 0, 0.15), var(--shadow);
   --shadow-deep: 0rem 0.225em 0.225em var(--gray);
+}
+blockquote .code,
+button .code,
+caption .code,
+dd .code,
+dt .code,
+figcaption .code,
+h1 .code,
+h2 .code,
+h3 .code,
+h4 .code,
+h5 .code,
+h6 .code,
+input .code,
+legend .code,
+option .code,
+output .code,
+p .code,
+pre .code,
+select .code,
+textarea .code,
+blockquote .link,
+button .link,
+caption .link,
+dd .link,
+dt .link,
+figcaption .link,
+h1 .link,
+h2 .link,
+h3 .link,
+h4 .link,
+h5 .link,
+h6 .link,
+input .link,
+legend .link,
+option .link,
+output .link,
+p .link,
+pre .link,
+select .link,
+textarea .link {
+  display: inline;
 }
 .abbr {
   font-style: italic;
@@ -403,6 +447,25 @@ This file contains LESS variables for each of the colors in the DLx color schema
   color: white;
 }
 .cite {
+  font-style: italic;
+}
+.code {
+  background-color: var(--codegray);
+  border: var(--border);
+  border-radius: var(--border-radius);
+  color: var(--codedarkgray);
+  display: block;
+  font-family: var(--font-mono);
+  font-size: 0.75em;
+  font-style: normal;
+  overflow-x: auto;
+  padding: var(--padding-text);
+  white-space: pre;
+}
+.dfn {
+  font-style: italic;
+}
+.em {
   font-style: italic;
 }
 .banner {
