--- a/css/variables.css
+++ b/css/variables.css
@@ -1,4 +1,5 @@
 :root {
+  --border: 0.075em solid black;
   --border-radius: 0.35em;
   --font: 'Fira Sans', 'Calibri', 'DejaVu Sans', 'Verdana', 'Arial', 'Helvetica', sans-serif;
   --font-mono: 'Fira Mono', 'Consolas', 'Monaco', 'DejaVu Mono', 'Courier New', monospace;
