--- a/elements/code.hbs
+++ b/elements/code.hbs
@@ -2,13 +2,11 @@
   This is an example of a paragraph with <code class=code>inline code</code>. Below is an example of a standalone code block.
 </p>
 
-<code class=code>
-{
+<code class=code>{
   "dateCreated": "2017-03-13T02:36:22.123Z",
   "dateModified": "2017-03-13T04:51:26.134Z",
   "name": {
     "eng": "Chitimacha",
     "ctm": "Sitimaxa"
   }
-}
-</code>
+}</code>
