--- a/less/colors.less
+++ b/less/colors.less
@@ -41,18 +41,20 @@ This file contains LESS variables for each of the colors in the DLx color schema
 
   // Gray
   //
-  // $codegray  - #FAFAFA; code gray
-  // $darkgray  - #808080; dark gray
-  // $gray      - #CCC; gray
-  // $lightgray - #F5F2F0; light gray
+  // $codegray     - #FAFAFA; code gray
+  // $codedarkgray - #383A42; dark gray code
+  // $darkgray     - #808080; dark gray
+  // $gray         - #CCC; gray
+  // $lightgray    - #F5F2F0; light gray
   //
   // Weight: 3
   //
   // Styleguide Colors.Gray
-  --codegray:  #FAFAFA;
-  --darkgray:  gray;
-  --gray:      #CCC;
-  --lightgray: #F5F2F0;
+  --codegray:     #FAFAFA;
+  --codedarkgray: #383A42;
+  --darkgray:     gray;
+  --gray:         #CCC;
+  --lightgray:    #F5F2F0;
 
   // Green
   //
