--- a/less/variables.less
+++ b/less/variables.less
@@ -1,5 +1,6 @@
 :root {
 
+  --border: 0.075em solid black;
   --border-radius: 0.35em;
 
   --font: 'Fira Sans', 'Calibri', 'DejaVu Sans', 'Verdana', 'Arial', 'Helvetica', sans-serif;
