--- a/css/dlx.css
+++ b/css/dlx.css
@@ -103,7 +103,6 @@ video {
   text-decoration: none;
   vertical-align: baseline;
 }
-a,
 abbr,
 acronym,
 b,
@@ -111,7 +110,6 @@ bdo,
 big,
 br,
 cite,
-code,
 del,
 dfn,
 em,
@@ -154,6 +152,48 @@ pre,
 select,
 textarea {
   display: block;
+}
+blockquote a,
+button a,
+caption a,
+dd a,
+dt a,
+figcaption a,
+h1 a,
+h2 a,
+h3 a,
+h4 a,
+h5 a,
+h6 a,
+input a,
+legend a,
+option a,
+output a,
+p a,
+pre a,
+select a,
+textarea a,
+blockquote code,
+button code,
+caption code,
+dd code,
+dt code,
+figcaption code,
+h1 code,
+h2 code,
+h3 code,
+h4 code,
+h5 code,
+h6 code,
+input code,
+legend code,
+option code,
+output code,
+p code,
+pre code,
+select code,
+textarea code {
+  display: inline;
 }
 [hidden] {
   display: none;
@@ -321,6 +361,7 @@ This file contains LESS variables for each of the colors in the DLx color schema
   --lightblue: #5CAFFF;
   --verylightblue: #88C4FE;
   --codegray: #FAFAFA;
+  --codedarkgray: #383A42;
   --darkgray: gray;
   --gray: #CCC;
   --lightgray: #F5F2F0;
@@ -599,24 +640,6 @@ This file contains DLx styles that need to be explicitly specified using classes
   --underline-blue: 0.075em solid var(--blue);
   --underline-purple: 0.075em solid var(--purple);
   --underline-transparent: 0.075em solid transparent;
-}
-.code {
-  background-color: var(--codegray);
-  border: var(--border);
-  border-radius: var(--border-radius);
-  color: #383a42;
-  font-family: var(--font-mono);
-  font-size: 0.75em;
-  font-style: normal;
-  overflow-x: auto;
-  padding: var(--padding-text);
-  white-space: pre;
-}
-.dfn {
-  font-style: italic;
-}
-.em {
-  font-style: italic;
 }
 .field {
   background-color: white;
