--- a/css/inline.css
+++ b/css/inline.css
@@ -24,3 +24,110 @@
 .italic {
   font-style: italic;
 }
+.kbd {
+  background-color: var(--codegray);
+  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));
+  border: 0.035em solid #BBB;
+  border-radius: var(--border-radius);
+  color: #444;
+  padding: var(--padding-text);
+  text-align: center;
+  text-shadow: 0em 0.075em 0em white;
+  box-shadow: 0em 0.15em 0em var(--gray), 0.02em 0.225em 0.2em var(--darkgray), inset 0em 0.075em 0.075em white, inset 0em -0.075em 0.225em var(--gray);
+}
+.link {
+  background: transparent;
+  color: var(--link-color);
+  border-bottom: var(--underline-transparent);
+  text-decoration: none;
+  --underline: 0.075em solid var(--link-color);
+}
+.link:link {
+  color: var(--link-color);
+}
+.link:visited {
+  color: var(--link-color-visited);
+}
+.link:hover {
+  border-bottom: var(--underline);
+}
+.link:active {
+  color: var(--link-color);
+}
+.link:visited:hover {
+  border-bottom: var(--underline);
+}
+.link:visited:active {
+  color: var(--link-color-visited);
+}
+.link-white {
+  background: transparent;
+  color: var(--link-color);
+  border-bottom: var(--underline-transparent);
+  text-decoration: none;
+  --underline: 0.075em solid var(--link-color);
+  --link-color: white;
+  --link-color-visited: white;
+}
+.link-white:link {
+  color: var(--link-color);
+}
+.link-white:visited {
+  color: var(--link-color-visited);
+}
+.link-white:hover {
+  border-bottom: var(--underline);
+}
+.link-white:active {
+  color: var(--link-color);
+}
+.link-white:visited:hover {
+  border-bottom: var(--underline);
+}
+.link-white:visited:active {
+  color: var(--link-color-visited);
+}
+.strong {
+  color: var(--verydarkblue);
+  font-weight: var(--bold);
+}
+.orthographic {
+  font-family: var(--font-unicode);
+  font-size: 1.15em;
+}
+.orthographic::before {
+  content: '<';
+  padding-right: var(--padding-ipa);
+}
+.orthographic::after {
+  content: '>';
+  padding-left: var(--padding-ipa);
+}
+.phonemic {
+  font-family: var(--font-unicode);
+  font-size: 1.15em;
+}
+.phonemic::before {
+  content: '/';
+  padding-right: var(--padding-ipa);
+}
+.phonemic::after {
+  content: '/';
+  padding-left: var(--padding-ipa);
+}
+.phonetic {
+  font-family: var(--font-unicode);
+  font-size: 1.15em;
+}
+.phonetic::before {
+  content: '[';
+  padding-right: var(--padding-ipa);
+}
+.phonetic::after {
+  content: ']';
+  padding-left: var(--padding-ipa);
+}
+.unicode {
+  font-family: var(--font-unicode);
+  font-size: 1.15em;
+}
