--- a/css/variables.css
+++ b/css/variables.css
@@ -6,10 +6,13 @@
   --font: 'Fira Sans', 'Calibri', 'DejaVu Sans', 'Verdana', 'Arial', 'Helvetica', sans-serif;
   --font-mono: 'Fira Mono', 'Consolas', 'Monaco', 'DejaVu Mono', 'Courier New', monospace;
   --font-unicode: 'Gentium Plus', 'Charis SIL', 'Doulos SIL', 'Cambria', 'Andika', 'Lucida Sans Unicode', 'Times New Roman', 'Georgia', serif;
+  --link-color: var(--blue);
+  --link-color-visited: var(--purple);
   --padding-text: 0.25em 0.5em;
   --shadow-color: var(--gray);
   --shadow: 0.075em 0.075em 0.15em var(--shadow-color);
   --shadow-button: inset -0.075em -0.075em 0.15em rgba(0, 0, 0, 0.15), var(--shadow);
   --shadow-deep: 0rem 0.225em 0.225em var(--shadow-color);
   --shadow-inset: inset 0.075em 0.075em 0.15em var(--shadow-color);
+  --underline-transparent: 0.075em solid transparent;
 }
