--- a/less/inline.less
+++ b/less/inline.less
@@ -81,3 +81,166 @@
 .italic {
   font-style: italic;
 }
+
+// Keyboard
+//
+// Used for indicating keyboard input.
+//
+// Markup: kbd.hbs
+//
+// Styleguide Elements.Inline.kbd
+.kbd {
+
+  background-color: var(--codegray);
+  background-image: linear-gradient(to top, rgba(0,0,0,0.1), rgba(0,0,0,0));
+  border: 0.035em solid #BBB;
+  border-radius: var(--border-radius);
+	color: #444;
+  padding: var(--padding-text);
+	text-align: center;
+	text-shadow: 0em 0.075em 0em white;
+
+  box-shadow: 0em 0.15em 0em var(--gray),
+    0.02em 0.225em 0.2em var(--darkgray),
+    inset 0em 0.075em 0.075em white,
+    inset 0em -0.075em 0.225em var(--gray);
+
+}
+
+// Link
+//
+// The `.link` class styles an anchor (`<a>`) element as an inline link. Change the CSS `--link-color` variable to change the link's color.
+//
+// Markup: link.hbs
+//
+// .link-white - Applies white coloring to link (for dark backgrounds)
+// :active     - When the link is being clicked
+// :hover      - When the link is hovered over
+// :visited    - When the link has already been visited
+//
+// Styleguide Elements.Inline.link
+.link {
+
+  background: transparent;
+  color: var(--link-color);
+  border-bottom: var(--underline-transparent);
+  text-decoration: none;
+
+  --underline: 0.075em solid var(--link-color);
+
+  &:link { color: var(--link-color); }
+  &:visited { color: var(--link-color-visited); }
+  &:hover { border-bottom: var(--underline); }
+  &:active { color: var(--link-color); }
+  &:visited:hover { border-bottom: var(--underline); }
+  &:visited:active { color: var(--link-color-visited); }
+
+}
+
+.link-white {
+  .link;
+  --link-color: white;
+  --link-color-visited: white;
+}
+
+// Strong
+//
+// Used to draw the reader's attention to a term or concept, indicating that it is important.
+//
+// Markup: strong.hbs
+//
+// Styleguide Elements.Inline.strong
+.strong {
+  color: var(--verydarkblue);
+  font-weight: var(--bold);
+}
+
+
+// Transcriptions
+//
+// Classes for styling inline transcriptions.
+//
+// Styleguide Elements.Inline.Transcriptions
+
+
+// Orthographic
+//
+// This class should be used when citing an orthographic representation of some data, e.g., when writing about writing systems.
+//
+// Markup: orthographic.hbs
+//
+// Styleguide Elements.Inline.Transcriptions.orthographic
+.orthographic {
+
+  .unicode;
+
+  &::before {
+    content: '<';
+    padding-right: var(--padding-ipa);
+  }
+
+  &::after  {
+    content: '>';
+    padding-left: var(--padding-ipa);
+  }
+
+}
+
+// Phonemic
+//
+// Used for phonemic representations of data.
+//
+// Markup: phonemic.hbs
+//
+// Styleguide Elements.Inline.Transcriptions.phonemic
+.phonemic {
+
+  .unicode;
+
+  &::before {
+    content: '/';
+    padding-right: var(--padding-ipa);
+  }
+
+  &::after  {
+    content: '/';
+    padding-left: var(--padding-ipa);
+  }
+
+}
+
+// Phonetic
+//
+// Used for phonetic representations of data.
+//
+// Markup: phonetic.hbs
+//
+// Styleguide Elements.Inline.Transcriptions.phonetic
+.phonetic {
+
+  .unicode;
+
+  &::before {
+    content: '[';
+    padding-right: var(--padding-ipa);
+  }
+
+  &::after  {
+    content: ']';
+    padding-left: var(--padding-ipa);
+  }
+
+}
+
+// Unicode
+//
+// Used when a Unicode font is needed. More semantic styles such as `.phonetic` or `.phonemic` should be preferred over this one when possible.
+//
+// Markup: unicode.hbs
+//
+// Styleguide Elements.Inline.Transcriptions.unicode
+.unicode {
+  font-family: var(--font-unicode);
+  font-size: 1.15em;
+  // line-height: 1; // QUESTION: Why was this here originally?
+}
