--- a/elements/link.hbs
+++ b/elements/link.hbs
@@ -3,5 +3,5 @@
 </p>
 
 <p style="background-color: var(--blue); padding: var(--padding-text);">
-  <a class="link-white" href="#">This</a> shows a <code>.link-white</code> link with a dark-colored background.
+  <a class="link-white {{modifier_class}}" href="#">This</a> shows a <code>.link-white</code> link with a dark-colored background.
 </p>
