--- a/docs/patterns.css
+++ b/docs/patterns.css
@@ -102,8 +102,6 @@ This file contains LESS variables for each of the colors in the DLx color schema
   --codegray: #FAFAFA;
   --codedarkgray: #383A42;
   --darkgray: gray;
-  --temp: #BBB;
-  --temp2: #999;
   --gray: #CCC;
   --lightgray: #F5F2F0;
   --verylightgreen: #7FFED1;
@@ -360,20 +358,22 @@ This file contains LESS variables for each of the colors in the DLx color schema
 :root {
   --bold: 600;
   --border-color: black;
-  --border: 0.075em solid var(--border-color);
+  --border: var(--line-width) solid var(--border-color);
   --border-radius: 0.35em;
   --font: 'Fira Sans', 'Calibri', 'DejaVu Sans', 'Verdana', 'Arial', 'Helvetica', sans-serif;
   --font-mono: 'Fira Mono', 'Consolas', 'Monaco', 'DejaVu Mono', 'Courier New', monospace;
   --font-unicode: 'Gentium Plus', 'Charis SIL', 'Doulos SIL', 'Cambria', 'Andika', 'Lucida Sans Unicode', 'Times New Roman', 'Georgia', serif;
+  --line-width: 0.075em;
   --link-color: var(--blue);
   --link-color-visited: var(--purple);
   --padding-text: 0.25em 0.5em;
   --shadow-color: var(--gray);
-  --shadow: 0.075em 0.075em 0.15em var(--shadow-color);
+  --shadow: var(--line-width) var(--line-width) 0.15em var(--shadow-color);
   --shadow-button: inset -0.075em -0.075em 0.15em rgba(0, 0, 0, 0.15), var(--shadow);
   --shadow-deep: 0rem 0.225em 0.225em var(--shadow-color);
-  --shadow-inset: inset 0.075em 0.075em 0.15em var(--shadow-color);
-  --underline-transparent: 0.075em solid transparent;
+  --shadow-inset: inset var(--line-width) var(--line-width) 0.15em var(--shadow-color);
+  --underline: var(--line-width) solid;
+  --underline-transparent: var(--line-width) solid transparent;
 }
 .button {
   --link-color: white;
@@ -1066,6 +1066,16 @@ This file contains LESS variables for each of the colors in the DLx color schema
 .label p {
   padding: var(--padding-text);
 }
+.select {
+  border: var(--border);
+  --border-color: var(--gray);
+  border-radius: var(--border-radius);
+  box-shadow: var(--shadow-button);
+  padding: var(--padding-text);
+}
+.select:focus {
+  outline: none;
+}
 .textarea {
   background-color: transparent;
   border: 0.075em solid var(--gray);
@@ -1185,60 +1195,36 @@ This file contains LESS variables for each of the colors in the DLx color schema
   color: #444;
   padding: var(--padding-text);
   text-align: center;
-  text-shadow: 0em 0.075em 0em white;
-  box-shadow: 0em 0.15em 0em var(--gray), 0.02em 0.225em 0.2em var(--darkgray), inset 0em 0.075em 0.075em white, inset 0em -0.075em 0.225em var(--gray);
+  text-shadow: 0em var(--line-width) white;
+  box-shadow: 0em 0.15em 0em var(--gray), 0.02em 0.225em 0.2em var(--darkgray), inset 0em var(--line-width) var(--line-width) white, inset 0em -0.075em 0.225em var(--gray);
 }
 .link {
   background: transparent;
   color: var(--link-color);
   border-bottom: var(--underline-transparent);
   text-decoration: none;
-  --underline: 0.075em solid var(--link-color);
-}
-.link:link {
-  color: var(--link-color);
 }
 .link:visited {
-  color: var(--link-color-visited);
+  --link-color: var(--link-color-visited);
 }
 .link:hover {
   border-bottom: var(--underline);
-}
-.link:active {
-  color: var(--link-color);
-}
-.link:visited:hover {
-  border-bottom: var(--underline);
-}
-.link:visited:active {
-  color: var(--link-color-visited);
 }
 .link-white {
   background: transparent;
   color: var(--link-color);
   border-bottom: var(--underline-transparent);
   text-decoration: none;
-  --underline: 0.075em solid var(--link-color);
   --link-color: white;
-  --link-color-visited: white;
-}
-.link-white:link {
-  color: var(--link-color);
 }
 .link-white:visited {
-  color: var(--link-color-visited);
+  --link-color: var(--link-color-visited);
 }
 .link-white:hover {
   border-bottom: var(--underline);
 }
-.link-white:active {
-  color: var(--link-color);
-}
-.link-white:visited:hover {
-  border-bottom: var(--underline);
-}
-.link-white:visited:active {
-  color: var(--link-color-visited);
+.link-white:visited {
+  --link-color: white;
 }
 .strong {
   color: var(--verydarkblue);
