--- a/less/variables.less
+++ b/less/variables.less
@@ -15,6 +15,7 @@
   --link-color: var(--blue);
   --link-color-visited: var(--purple);
 
+  --padding-ipa: 0.15em;
   --padding-text: 0.25em 0.5em;
 
   --shadow-color: var(--gray);
